crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_unused_n_s__remove_unused_n_s-4.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_unused_n_s.rs
expression: "test_config(r#\"{ \"removeUnusedNS\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:test=\"http://trololololololololololo.com/\" xmlns:test2=\"http://trololololololololololo.com/\">\n    <g test:attr=\"val\">\n        <g test2:attr=\"val\">\n            test\n        </g>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <g test:attr="val">
        <g test2:attr="val">
            test
        </g>
    </g>
</svg>
