crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_unused_n_s__remove_unused_n_s-6.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_unused_n_s.rs
expression: "test_config(r#\"{ \"removeUnusedNS\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:test=\"http://trololololololololololo.com/\" xmlns:test2=\"http://trololololololololololo.com/\">\n    <test:elem>\n        <test2:elem>\n            test\n        </test2:elem>\n    </test:elem>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <test:elem xmlns:test="http://trololololololololololo.com/">
        <test2:elem xmlns:test2="http://trololololololololololo.com/">
            test
        </test2:elem>
    </test:elem>
</svg>
